src/scss/components/_lists.scss
/**
 * 	General lists
 */
.general-list,
.card-list {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	box-sizing: border-box;
	width: 100%;
	margin: 0;
	list-style-type: none;
}
.list-item,
.list-header {
	display: flex;
	position: relative;
	align-items: center;
	justify-content: space-between;
	flex-wrap: wrap;
	box-sizing: border-box;
	width: 100%;
	overflow: visible;
	padding: 0.5rem 1rem;
	border-top: 1px solid $off-white;
	background-color: white;

	&:hover {
		background-color: $off-white;
	}
	
	p,h2,h3 {
		display: inline-block;
	}
	p {
		margin: 0;
	}
	.item-deployable {
		font-size: $h2-size;
		color: $blue;
		font-weight: 400;
	}
}
.list-header {
	background-color: white!important;
	h4 {
		color: $grey;
		font-weight: 600;
	}
	.list-section { 
		padding: 1rem 0;
	}
}
.list-section {
	box-sizing: border-box;
	padding: 0;
}
.list-controls {
	text-align: right;
}
.list-item.loading {
	overflow: hidden;

	ul, p, h2, button {
		opacity: 0.2;
	}
}

/**
 * 	Filterlist
 *
 * 	For .editable class, see _helpers.scss
 */
.filters-list {
	input {
		display: inline-block;
		box-sizing: border-box;
		margin-bottom: 0.5rem;
		width: 100%;
	}
	input[disabled] {
		padding: 0 1em 0 0;
		margin-bottom: 0;
	}
	.submit-button {
		text-align: right;
		outline: none;
		font-size: $xs-size;
		color: $blue;
		background-color: transparent;
		border: none;
		padding: 0;
		line-height: 1rem;
		margin-top: -0.5rem;
		float: right;
	}
	.submit-button[disabled] {
		display: none;
	}
}

/**
 * 	Dropdownlist
 */
.dropdown-list-container {
	position: relative;
	height: 1.625rem;

	p {
		margin-right: 0.2rem;
	}
}
.dropdown-list {
	position: relative;
	vertical-align: top;
	display: inline-block;
	cursor: default;
	width: 49%;
	margin-top: -0.1rem;
	margin-left: -0.3rem;

	li {
		display: none;
		background-color: white;
		padding: 0.2rem 0.5rem;
		font-size: $s-size;
	}
	li:first-of-type {
		display: inline-block;
		background-color: transparent;
		font-size: $xs-size;
	}

	&:hover {
		z-index: 20;
		box-shadow: 0 0 3px rgba(0,0,0,0.3);

		li {
			background-color: white;
			position: relative;
			z-index: 20;
			display: block;
			overflow: hidden;
  			text-overflow: ellipsis;

  			&:hover {
  				background-color: $off-white;
  			}
		}
	}
}
.dropdown-list-message {
	max-width: 50%;
	overflow: hidden;
  	text-overflow: ellipsis;
}

